[package]
name = "test-esp32c3"
version = "0.1.0"
authors = ["imxood <imxood@163.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

# [features]
# native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.24.6", features = ["binstart", "std", "native"], default-features = false }


[build-dependencies]
embuild = "0.25"
anyhow = "1"
